новая иконка и заголовок

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
+    <link href="%PUBLIC_URL%/favicon.png" rel="icon"/>
     <link href="https://bootswatch.com/5/materia/bootstrap.css" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <title>React App</title>
+    <title>Визуальный инструмент для генерации готовых проектов</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
